--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
         <div class="show-more">Show More</div>
     </div>
 </body>
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </html>
